--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pandas==1.0.1
-numpy==1.18.1
-scipy==1.4.1
-watermark==2.0.2
-matplotlib==3.1.3
 networkx==2.4
+tqdm==4.43.0
+numpy==1.18.1
+watermark==2.0.2
+pandas==1.0.1
+scipy==1.4.1
+matplotlib==3.1.3
