--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-Cartopy==0.18.0
 matplotlib==3.1.3
 networkx==2.4
 numpy==1.18.1
@@ -7,3 +6,5 @@ scipy==1.4.1
 tqdm==4.46.0
 watermark==2.0.2
 wget==3.2
+shapely
+Cartopy==0.18.0
