--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,14 @@
 dependencies:
-  - matplotlib==3.1.3
-  - networkx=2.4
-  - numpy==1.18.1
-  - pandas==1.0.1
-  - scipy==1.4.1
-  - tqdm==4.46.0
-  - watermark==2.0.2
-  - python-wget==3.2
-  - shapely
-  - Cartopy==0.18.0
+  - beautifulsoup4==4.12.3
+  - Cartopy==0.22.0
+  - ipywidgets==8.0.4
+  - matplotlib==3.7.2
+  - networkx==3.1
+  - numpy==1.23.5
+  - pandas==2.0.3
+  - Requests==2.31.0
+  - scipy==1.12.0
+  - seaborn==0.13.2
+  - tqdm==4.65.0
+  - watermark==2.4.3
+  - wget==3.2
