--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,20 @@
 dependencies:
-  - matplotlib==3.1.3
-  - networkx=2.4
-  - numpy==1.18.1
-  - pandas==1.0.1
-  - scipy==1.4.1
-  - tqdm==4.46.0
-  - watermark==2.0.2
-  - python-wget==3.2
+  - beautifulsoup4>=4.12.3
+  - Cartopy>=0.22.0
+  - epidemik>=0.0.11
+  - ipython>=8.12.3
+  - ipywidgets>=8.1.2
+  - matplotlib>=3.8.0
+  - networkx>=3.1
+  - numpy>=1.26.4
+  - pandas>=2.2.1
+  - pymc3>=3.11.5
+  - Requests>=2.31.0
+  - scipy>=1.13.0
+  - seaborn>=0.13.2
+  - theano>=1.0.5
+  - tqdm>=4.66.2
+  - watermark>=2.4.3
+  - wget>=3.2
   - shapely
-  - Cartopy==0.18.0
+
